[build-system]
# Minimum requirements for the build system to execute.
requires = [
    'setuptools<49.2.0',
    'wheel<=0.35.1',
    'Cython>=0.29.21',
]

[tool.black]
# https://github.com/psf/black
max-line-length = 120
target-version = ["py38"]
ignore = ["W504", "W504", "E402", "E731", "C40", "E741", "F40", "F841"]
exclude = "(.eggs|.git|.hg|.mypy_cache|.nox|.tox|.venv|.svn|_build|buck-out|build|dist)"

[tool.isort]
known_first_party = [
    "caer",
    "tests",
]

profile = "black"
line_length = 120