[metadata]
name = caer
user = jasmcaus
status = 4
author = Jason Dsouza
author_email = jasmcaus@gmail.com
description = Computer Vision on the fly. Caer simplifies training and visualizing Computer Vision models using modern best practices
keywords = caer, computer vision, toolkit, opencv, image processing, video processing, deep learning, machine learning
download_url = https://pypi.org/project/caer
git_url = https://github.com/jasmcaus/caer
copyright = Jason Dsouza
contributors = Jason Dsouza
audience = Developers, Researchers, Education
dev_language = Python
language = English
license = MIT License
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    License :: OSI Approved :: MIT License
doc_path = DOCS
git_branch = master
lib_path = caer
host = github

[options]
min_python = 3.6
pip_requirements = numpy, opencv-contrib-python, requests
zip_safe = False
include_package_data = True

[build_ext]
inplace=1